# tmw-desbravando-pandas

./: .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
dia01/: exercicios.ipynb  series.ipynb
dia01-principais-objetos/: dataframes.ipynb  intro.py
dia02/: exercicios.ipynb  imports_csv_I.ipynb  imports_csv_II.ipynb
dia02-importando-arquivos/: imports_excel.ipynb  imports_parquet.ipynb
dia03/: ordenacao.ipynb  removendo_duplicadas.ipynb  removendo_duplicadas_exercicio.ipynb
